compiler/testData/diagnostics/tests/falseNegativeUpperBoundViolated.diag.txt
/falseNegativeUpperBoundViolated.kt:18:22: error: type argument is not within its bounds: should be subtype of 'BetaKey'
    Container<Alpha, BetaKey>()
                     ^^^^^^^
/falseNegativeUpperBoundViolated.kt:18:22: error: type argument is not within its bounds: should be subtype of 'AlphaKey'
    Container<Alpha, BetaKey>()
                     ^^^^^^^
/falseNegativeUpperBoundViolated.kt:18:22: error: type argument is not within its bounds: should be subtype of 'Element<BetaKey>'
    Container<Alpha, BetaKey>()
                     ^^^^^^^
/falseNegativeUpperBoundViolated.kt:19:22: error: type argument is not within its bounds: should be subtype of 'String'
    Container<Alpha, String>()
                     ^^^^^^
/falseNegativeUpperBoundViolated.kt:19:22: error: type argument is not within its bounds: should be subtype of 'Key'
    Container<Alpha, String>()
                     ^^^^^^
/falseNegativeUpperBoundViolated.kt:19:22: error: type argument is not within its bounds: should be subtype of 'AlphaKey'
    Container<Alpha, String>()
                     ^^^^^^
/falseNegativeUpperBoundViolated.kt:19:22: error: type argument is not within its bounds: should be subtype of 'Element<String>'
    Container<Alpha, String>()
                     ^^^^^^
/falseNegativeUpperBoundViolated.kt:21:15: error: type argument is not within its bounds: should be subtype of 'BetaKey'
    TA<Alpha, BetaKey>()
              ^^^^^^^
/falseNegativeUpperBoundViolated.kt:21:15: error: type argument is not within its bounds: should be subtype of 'AlphaKey'
    TA<Alpha, BetaKey>()
              ^^^^^^^
/falseNegativeUpperBoundViolated.kt:21:15: error: type argument is not within its bounds: should be subtype of 'Element<BetaKey>'
    TA<Alpha, BetaKey>()
              ^^^^^^^
/falseNegativeUpperBoundViolated.kt:22:15: error: type argument is not within its bounds: should be subtype of 'String'
    TA<Alpha, String>()
              ^^^^^^
/falseNegativeUpperBoundViolated.kt:22:15: error: type argument is not within its bounds: should be subtype of 'Key'
    TA<Alpha, String>()
              ^^^^^^
/falseNegativeUpperBoundViolated.kt:22:15: error: type argument is not within its bounds: should be subtype of 'AlphaKey'
    TA<Alpha, String>()
              ^^^^^^
/falseNegativeUpperBoundViolated.kt:22:15: error: type argument is not within its bounds: should be subtype of 'Element<String>'
    TA<Alpha, String>()
              ^^^^^^

